--- a/home.html
+++ b/home.html
@@ -646,7 +646,7 @@
         <button class="foot-btn active" onclick="location.href='home.html'">🔥</button>
         <button class="foot-btn"        onclick="location.href='store.html'">🛍️</button>
         <button class="foot-btn"        onclick="location.href='photo-battle.html'">⚔️</button>
-        <button class="foot-btn"        onclick="location.href='message.html'">📨</button>
+        <button class="foot-btn"        onclick="location.href='messages.html'">📨</button>
         <button class="foot-btn"        onclick="location.href='profile.html'">🪪</button>
     </footer>
 
