--- a/profile.html
+++ b/profile.html
@@ -939,12 +939,12 @@
 
     <!-- Stats -->
     <div class="stats-row fade-up">
-        <a href="followers.html" class="stat-item">
+        <a href="user-followers.html" class="stat-item">
             <div class="stat-num" id="statFollowers">0</div>
             <div class="stat-label">Followers</div>
             <div class="stat-arrow">›</div>
         </a>
-        <a href="following.html" class="stat-item">
+        <a href="user-following.html" class="stat-item">
             <div class="stat-num" id="statFollowing">0</div>
             <div class="stat-label">Following</div>
             <div class="stat-arrow">›</div>
