--- a/chat.html
+++ b/chat.html
@@ -95,6 +95,7 @@
             padding: 44px 14px 8px;
             display: flex; flex-direction: column; align-items: center;
             gap: 2px; flex-shrink: 0;
+            overflow: hidden;
         }
 
         /* Back + menu float in corners */
@@ -116,6 +117,31 @@
             width: 52px; height: 52px;
             cursor: pointer; flex-shrink: 0;
             margin-top: 0;
+        }
+
+        /* Owner PNG frame — sized to fit header, clipped so it doesn't bleed */
+        .owner-png-aura {
+            position: absolute; top: 50%; left: 50%;
+            transform: translate(-50%, -50%);
+            width: 70px; height: 70px; border-radius: 50%;
+            background: radial-gradient(ellipse, rgba(255,200,0,0.25) 0%, transparent 70%);
+            filter: blur(10px); z-index: 1; pointer-events: none;
+            animation: ownerAuraPulse 3s ease-in-out infinite;
+        }
+        .owner-png-frame {
+            position: absolute; top: 50%; left: 50%;
+            width: 150px; height: 82px;
+            transform: translate(-50%, calc(-50% - 2px));
+            z-index: 10; pointer-events: none;
+            animation: ownerWingBreath 4s ease-in-out infinite;
+        }
+        @keyframes ownerAuraPulse {
+            0%,100% { opacity:0.7; transform:translate(-50%,-50%) scale(1); }
+            50%      { opacity:1;   transform:translate(-50%,-50%) scale(1.1); }
+        }
+        @keyframes ownerWingBreath {
+            0%,100% { filter: drop-shadow(0 0 6px rgba(255,200,0,0.4)); }
+            50%      { filter: drop-shadow(0 0 14px rgba(255,200,0,0.7)); }
         }
 
         .header-avatar-img {
